ZGC: Hangs when almost out of metaspace memory

XMLWordPrintable

    • gc
    • b13
    • x86_64
    • windows
    • Verified

      The following test timed out in the JDK20 CI:

      vmTestbase/metaspace/shrink_grow/ShrinkGrowMultiJVM/ShrinkGrowMultiJVM.java

      Here's a snippet from the log file:

      #section:driver
      ----------messages:(8/320)----------
      command: driver metaspace.shrink_grow.ShrinkGrowMultiJVM.ShrinkGrowMultiJVM
      reason: User specified action: run driver metaspace.shrink_grow.ShrinkGrowMultiJVM.ShrinkGrowMultiJVM
      Mode: agentvm
      Agent id: 7
      Timeout refired 480 times
      Timeout information:
      --- Timeout information end.
      elapsed time (seconds): 985.07
      ----------configuration:(18/1972)*----------

      <snip>

      ----------System.out:(15/1074)*----------
      %arg #0: c:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-20+12-692\\windows-x64-debug.jdk\\jdk-20\\fastdebug\\bin\\java
      %arg #1: -Xlog:gc:gc_$i.log
      %arg #2: -XX:MetaspaceSize=10m
      %arg #3: -XX:MaxMetaspaceSize=20m
      %arg #4: -cp
      %arg #5: C:\\sb\\prod\\1661000537\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace\\classes\\5\\vmTestbase\\metaspace\\shrink_grow\\ShrinkGrowMultiJVM\\ShrinkGrowMultiJVM.d;C:\\sb\\prod\\1661000537\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace\\classes\\5\\vmTestbase;C:\\sb\\prod\\1661000537\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace\\classes\\5\\test\\lib
      %arg #6: -XX:MaxRAMPercentage=4.16667
      %arg #7: -Djava.io.tmpdir=c:\\sb\\prod\\1661000537\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_metaspace\\tmp
      %arg #8: -XX:+CreateCoredumpOnCrash
      %arg #9: -XX:+UseZGC
      %arg #10: metaspace.shrink_grow.ShrinkGrowTest.ShrinkGrowTest
      %arg #11: jvm#$i
      === process #0 started
      === process #1 started
      === proces
      result: Error. Agent error: java.lang.Exception: Agent 7 timed out with a timeout of 480 seconds; check console log for any additional details

            Assignee:
            Stefan Karlsson
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: