8292697: ZGC: Hangs when almost out of metaspace memory